adjust frontpage button spacing. Link images to correct images

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,12 +91,15 @@
 .buttongroup{
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  text-align: center;
+  justify-content: space-evenly;
+  text-align: center; 
+}
+.buttonpackage{
   padding: 0em 1em 0em 1em;
 }
 .buttonpackage img{
   height: 5em;
+
 }
 .buttonpackage p{
   font-family: Arial, Helvetica, sans-serif;
